Quiz summary email

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/modules-listing/templates/outer-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/modules-listing/templates/outer-template.html
@@ -3,6 +3,9 @@
     <button class="send-email none btn btn-success m-b-10 m-r-10" type="submit">
         <i class="fa fa-check"></i> Send Email
     </button>
+    <button class="send-summary none btn btn-success m-b-10 m-r-10" type="submit">
+        <i class="fa fa-check"></i> Send Summary
+    </button>
 
     <table class="table table-bordered m-t-10" id="content-pieces-table" >
         <thead>
@@ -46,6 +49,9 @@
         <i class="fa fa-check"></i> Send Email
     </button>
 
+    <button class="send-summary none btn btn-success m-b-10 m-r-10" type="submit" style="margin-top: 0.8%;">
+        <i class="fa fa-check"></i> Send Summary
+    </button>
     <!--
     <button id="send-sms" class="none btn btn-info btn-cons2 right pull-left m-t-10" type="submit">
         <i class="fa fa-check"></i> Send SMS
