Added border color for datetimepicker

--- a/wp-content/themes/walnut/walnut/dev/css/admin.css
+++ b/wp-content/themes/walnut/walnut/dev/css/admin.css
@@ -78,7 +78,8 @@
 
 #dialog-region .bootstrap-datetimepicker-widget .timepicker .btn-primary{
 	color: #ffffff;
-    background-color: #259b24; 
+    background-color: #259b24;
+    border-color: #259b24;
 }
 
 
