student admin features

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/modules-listing/templates/outer-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/modules-listing/templates/outer-template.html
@@ -3,6 +3,9 @@
     <button class="send-email none btn btn-success m-b-10 m-r-10" type="submit">
         <i class="fa fa-check"></i> Send Email
     </button>
+    <button class="send-summary none btn btn-success m-b-10 m-r-10" type="submit">
+        <i class="fa fa-check"></i> Send Summary
+    </button>
 
     <table class="table table-bordered m-t-10" id="content-pieces-table" >
         <thead>
@@ -44,6 +47,9 @@
 
     <button class="send-email none btn btn-success pull-left m-t-10 m-r-10" type="submit">
         <i class="fa fa-check"></i> Send Email
+    </button>
+    <button class="send-summary none btn btn-success m-b-10 m-r-10" style="margin-top: 0.85%" type="submit">
+        <i class="fa fa-check"></i> Send Summary
     </button>
 
     <!--
