--- a/wp-content/themes/walnut/walnut/dev/css/datetimepicker.css
+++ b/wp-content/themes/walnut/walnut/dev/css/datetimepicker.css
@@ -1,3 +1,8 @@
+.bootstrap-datetimepicker-widget table td.disabled, .bootstrap-datetimepicker-widget table td.disabled:hover{
+background: none;
+   color: #777;
+   cursor: not-allowed;
+}
 .xdsoft_datetimepicker {
 	box-shadow: 0 5px 15px -5px rgba(0, 0, 0, 0.506);
 	background: #fff;
