--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/modules-listing/templates/outer-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/modules-listing/templates/outer-template.html
@@ -1,18 +1,32 @@
+<style>
+    
+.flexContainer{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+.flexContainer .flexChild{
+    margin: 0 5px;
+}
+
+</style>
+
 <div class="col-lg-12">
 
-            <div class="a">
-            <button class="send-email none btn btn-success m-b-10 m-r-10" type="submit">
-                    <i class="fa fa-check"></i> Send Email
-            </button>
-            </div>
-
-            <div class="a">
-            <button class="send-summary btn btn-success m-b-10 m-r-10" type="submit">
-                    Send Summary
+        <div class="flexContainer">
+            <div class="flexChild">
+                <button class="send-email none btn btn-success m-b-10 m-r-10" type="submit">
+                        <i class="fa fa-check"></i> Send Email
                 </button>
             </div>
 
-            <div class="a">
+            <div class="flexChild">
+                <button class="send-summary btn btn-success m-b-10 m-r-10" type="submit">
+                        Send Summary
+                </button>
+            </div>
+
+            <div class="flexChild">
                 <div class="input-append success date">
                     <input type="text" name="start_date" id="start_date" class=" input-small span12" placeholder="start date">
                     <span class="add-on">
@@ -22,20 +36,17 @@
                 </div>
             </div>
 
-            <div class="a">
-            <div class="input-append success date">
-            <input placeholder="end date" type="text" name="end_date" id="end_date" class="input-small span12">
-            <span class="add-on">
-            <span class="arrow"></span>
-            <i class="fa fa-calendar"></i>
-            </span>
-                                            
+            <div class="flexChild">
+                <div class="input-append success date">
+                <input placeholder="end date" type="text" name="end_date" id="end_date" class="input-small span12">
+                <span class="add-on">
+                <span class="arrow"></span>
+                <i class="fa fa-calendar"></i>
+                </span>                            
+                </div>
             </div>
 
-            </div>
-
-    
-
+        </div>
 
 
     <table class="table table-bordered m-t-10" id="content-pieces-table" >
