--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -3112,6 +3112,10 @@ select:before {
   width: 100%;
 }
 
+.filters > .table-tools-actions > #s2id_divisions-filter{
+    width: 12%;
+  }
+
 a.browse-content-pieces-item{height:160px;}
 
 #textbooks.list.myClass .txtbook.noCursor {
