--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/modules-listing/templates/outer-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/modules-listing/templates/outer-template.html
@@ -1,11 +1,53 @@
+<style>
+    
+.flexContainer{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+.flexContainer .flexChild{
+    margin: 0 5px;
+}
+
+</style>
+
 <div class="col-lg-12">
 
-    <button class="send-email none btn btn-success m-b-10 m-r-10" type="submit">
-        <i class="fa fa-check"></i> Send Email
-    </button>
-    <button class="send-summary none btn btn-success m-b-10 m-r-10" type="submit">
-        <i class="fa fa-check"></i> Send Summary
-    </button>
+        <div class="flexContainer">
+            <div class="flexChild">
+                <button class="send-email none btn btn-success m-b-10 m-r-10" type="submit">
+                        <i class="fa fa-check"></i> Send Email
+                </button>
+            </div>
+
+            <div class="flexChild">
+                <div class="input-append success date">
+                    <input type="text" name="start_date" id="start_date" class="input-small span12" placeholder="start date">
+                    <span class="add-on">
+                    <span class="arrow"></span>
+                    <i class="fa fa-calendar"></i>
+                    </span>
+                </div>
+            </div>
+
+            <div class="flexChild">
+                <div class="input-append success date">
+                <input placeholder="end date" type="text" name="end_date" id="end_date" class="input-small span12">
+                <span class="add-on">
+                <span class="arrow"></span>
+                <i class="fa fa-calendar"></i>
+                </span>                            
+                </div>
+            </div>
+
+            <div class="flexChild">
+                <button class="send-summary btn btn-success m-b-10 m-r-10" type="submit">
+                        Send Summary
+                </button>
+            </div>
+
+        </div>
+
 
     <table class="table table-bordered m-t-10" id="content-pieces-table" >
         <thead>
@@ -48,10 +90,10 @@
     <button class="send-email none btn btn-success pull-left m-t-10 m-r-10" type="submit">
         <i class="fa fa-check"></i> Send Email
     </button>
-    <button class="send-summary none btn btn-success m-b-10 m-r-10" style="margin-top: 0.85%" type="submit">
-        <i class="fa fa-check"></i> Send Summary
-    </button>
 
+    <!--button class="send-summary btn btn-success m-b-10 m-r-10" type="submit" style="margin-top: 0.8%;">
+        <i class="fa fa-check"></i> Send Summary
+    </button-->
     <!--
     <button id="send-sms" class="none btn btn-info btn-cons2 right pull-left m-t-10" type="submit">
         <i class="fa fa-check"></i> Send SMS
