add textbook feature

--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/section-single/templates/section-full.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/section-single/templates/section-full.html
@@ -3,7 +3,7 @@
 </div>
 <div class="col-md-7">
 	<div id="Filters" class="pull-right">
-		<button class="add-chapter btn-default btn" type="button">Add Chapter</button>
+		<button class="add-sub btn-default btn" type="button">Add Sub Section</button>
 	</div>
 	<div id="chapters-list-region" class="listBox"></div>
 </div>
