--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/section-single/templates/section-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/section-single/templates/section-description.html
@@ -1,6 +1,6 @@
 <!-- BEGIN PAGE TITLE -->
 <div class="page-title"><!--<i class="icon-custom-left"></i>-->
-	<h3>{{classes_applicable}}<span class="semi-bold"> {{&name}}</span></h3>		
+	<h3>Section<span class="semi-bold"> {{&name}}</span></h3>		
 </div>
 <!-- END PAGE TITLE -->
 <div class="tiles cover-pic-wrapper">						
@@ -15,7 +15,7 @@
 				<h3 class="text-success semi-bold">
 					{{chapter_count}}
 				</h3>
-				<h5>Chapters</h5>
+				<h5>Sub Section</h5>
 				<h3 class="text-success semi-bold">
 					{{questions_count}}
 				</h3>
