--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/sub-single/templates/list-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/sub-single/templates/list-item.html
@@ -1,5 +1,5 @@
-<td><a class="chapter_titles" data-id="{{term_id}}" href="#textbook/{{parent}}/chapter/{{term_id}}">{{name}}</a></td>
-<td class="text-center">{{chapter_count}}</td>
+<td><a class="chapter_titles" data-id="{{term_id}}" href="#subsection">{{name}}</a></td>
+<!--td class="text-center">{{chapter_count}}</td-->
 <td class="text-center">{{teaching_modules}}</td>
 <td class="text-center">{{questions_count}}</td>
 <td>
