--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/sub-single/templates/sub-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/sub-single/templates/sub-description.html
@@ -1,6 +1,6 @@
 <!-- BEGIN PAGE TITLE -->
 <div class="page-title"><!--<i class="icon-custom-left"></i>-->
-	<h3>{{classes_applicable}}<span class="semi-bold"> {{&name}}</span></h3>		
+	<h3>Chapter<span class="semi-bold"> {{&name}}</span></h3>		
 </div>
 <!-- END PAGE TITLE -->
 <div class="tiles cover-pic-wrapper">						
@@ -12,10 +12,10 @@
 	<div class="row">
 		<div class="col-md-4 col-sm-4" >
 			<div class="user-mini-description">
-				<h3 class="text-success semi-bold">
+				<!--h3 class="text-success semi-bold">
 					{{chapter_count}}
 				</h3>
-				<h5>Chapters</h5>
+				<h5>Chapters</h5-->
 				<h3 class="text-success semi-bold">
 					{{questions_count}}
 				</h3>
