--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/templates/textbooks-list.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/templates/textbooks-list.html
@@ -17,7 +17,7 @@
 	<button class="add-textbook btn-default btn" type="button">Add Textbook</button>
 </div>
 
-<div class="pull-right">Search: 
+<div class="pull-right" style="margin-right:2%">Search: 
 	<input type="text" class="search-box" id="search-box">
 	<button class="btn btn-success btn-cons2" id="search-btn">
 		<i class="none progress-spinner fa fa-spinner fa-spin"></i> Search
