on add message done

--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/section-single/templates/sub-list-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/section-single/templates/sub-list-item.html
@@ -1,7 +1,7 @@
-<td><a class="chapter_titles" data-id="{{term_id}}" href="#textbook/636/chapter/359/section/{{parent}}/sub/:{{term_id}}">{{name}}</a></td>
+<td><!--a class="chapter_titles" data-id="{{term_id}}" href="#textbook/636/chapter/359/section/{{parent}}/sub/:{{term_id}}"-->{{name}}</a></td>
 <td class="text-center">{{chapter_count}}</td>
 <td class="text-center">{{teaching_modules}}</td>
-<td class="text-center">{{questions_count}}</td>
+<td class="text-center">{{sub_questions_count}}</td>
 <td>
 	Class Tests: {{class_test_count}}<br>
 	Practice Quizzes: {{practice_count}}<br>
