reload on add for only single-textbook done

--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/section-single/templates/section-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/section-single/templates/section-description.html
@@ -1,6 +1,9 @@
 <!-- BEGIN PAGE TITLE -->
 <div class="page-title"><!--<i class="icon-custom-left"></i>-->
-	<h3>Section<span class="semi-bold"> {{&name}}</span></h3>		
+	<h4><a href="#textbooks">{{base_class}}</a><br>
+	<a href="#textbook/{{textbook_id}}">{{base_textbook_name}}</a><br>
+	<a href="#textbook/{{textbook_id}}/chapter/{{base_chapter_id}}">{{base_chapter_name}}</a><br>
+	<span class="semi-bold"> {{&name}}</span></h4>		
 </div>
 <!-- END PAGE TITLE -->
 <div class="tiles cover-pic-wrapper">						
