--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/textbook-single/templates/textbook-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/textbook-single/templates/textbook-description.html
@@ -1,6 +1,6 @@
 <!-- BEGIN PAGE TITLE -->
 <div class="page-title"><!--<i class="icon-custom-left"></i>-->
-	<h4>{{classes_applicable}}<br><span class="semi-bold"> {{&name}}</span></h4>		
+	<h4><a href="#textbooks">{{classes_applicable}}</a><br><span class="semi-bold"> {{&name}}</span></h4>		
 </div>
 <!-- END PAGE TITLE -->
 <div class="tiles cover-pic-wrapper">						
