reloads collection and reflects count

--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/sub-single/templates/list-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/sub-single/templates/list-item.html
@@ -1,4 +1,4 @@
-<td><a class="chapter_titles" data-id="{{term_id}}" href="#subsection">{{name}}</a></td>
+<td><!--a class="chapter_titles" data-id="{{term_id}}" href="#subsection"-->{{name}}<!--/a--></td>
 <!--td class="text-center">{{chapter_count}}</td-->
 <td class="text-center">{{teaching_modules}}</td>
 <td class="text-center">{{questions_count}}</td>
