add textbook only for school admin

--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/section-single/templates/section-full.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/section-single/templates/section-full.html
@@ -2,8 +2,10 @@
 	<div id="textbook-description-region"></div>	
 </div>
 <div class="col-md-7">
+{{#isAdmin}}
 	<div id="Filters" class="pull-right">
 		<button class="add-sub btn-default btn" type="button">Add Sub Section</button>
 	</div>
+{{/isAdmin}}
 	<div id="chapters-list-region" class="listBox"></div>
 </div>
