--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/modules-listing/templates/outer-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/modules-listing/templates/outer-template.html
@@ -1,19 +1,18 @@
 <style>
     
-.flexContainer{
+.flexContainer.flex-row{
     display: flex;
-    align-items: center;
+    align-items: initial;
     justify-content: flex-start;
 }
 .flexContainer .flexChild{
-    margin: 0 5px;
+    /*margin: 0 5px;*/
 }
-
 </style>
 
 <div class="col-lg-12">
 
-        <div class="flexContainer">
+        <div class="flexContainer flex-row">
             <div class="flexChild">
                 <button class="send-email none btn btn-success m-b-10 m-r-10" type="submit">
                         <i class="fa fa-check"></i> Send Email
@@ -41,7 +40,7 @@
             </div>
 
             <div class="flexChild">
-                <button class="send-summary btn btn-success m-b-10 m-r-10" type="submit">
+                <button class="send-summary btn btn-success m-b-10 m-r-10" type="submit" style="padding: 8px 18px;">
                         Send Summary
                 </button>
             </div>
