search textbook feature

--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/templates/textbooks-list.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/templates/textbooks-list.html
@@ -12,12 +12,7 @@
 	</div>
 </div>
 	
-<!-- search and add textbook button-->
-{{#isAdmin}}
-<div id="Filters" class="pull-right">
-	<button class="add-textbook btn-default btn" type="button">Add Textbook</button>
-</div>
-{{/isAdmin}}
+<!-- search textbook button-->
 <div class="pull-right" style="margin-right:2%">Textbook: 
 	<input type="text" class="search-box" id="search-box">
 	<button class="btn btn-success btn-cons2" id="search-btn">
