--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/modules-listing/templates/outer-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/modules-listing/templates/outer-template.html
@@ -1,14 +1,13 @@
 <style>
     
-.flexContainer{
+.flexContainer.flex-row{
     display: flex;
-    align-items: center;
+    align-items: initial;
     justify-content: flex-start;
 }
 .flexContainer .flexChild{
-    margin: 0 5px;
+    /*margin: 0 5px;*/
 }
-
 </style>
 
 <div class="col-lg-12">
