--- a/wp-content/themes/walnut/walnut/dev/css/admin.css
+++ b/wp-content/themes/walnut/walnut/dev/css/admin.css
@@ -191,7 +191,9 @@
 
 .btn.view-report,
 .btn.schedule-quiz{
-  padding: 2px 6px;
+  padding: 6px 8px;
+  display: block;
+  margin: auto; 
 }
 
 .table .checkbox{
