minor changes in datepicker color

--- a/wp-content/themes/walnut/walnut/dev/css/admin.css
+++ b/wp-content/themes/walnut/walnut/dev/css/admin.css
@@ -206,5 +206,11 @@
   width: 50%;
 }
 
+.input-append.success .add-on{
+  background-color: #D1DADE;
+}
 
+.input-append.success .add-on .arrow{
+  color: #D1DADE;
+}
 
