--- a/wp-content/themes/walnut/walnut/dev/js/apps/edit-module/module-description/templates/collection-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/edit-module/module-description/templates/collection-details.html
@@ -243,7 +243,13 @@
                                             <label for="answer">Display Answer</label>
                                         </div>
                                     </div>
+                                    <!-- <div class="col-sm-6">
+                                        <input class="col-sm-2" value="1" name="permissions[displayAfterDays]" id="replaydays" type="number" >
+                                        <input class="col-sm-4" name="permissions[displayAfterHours]" id="replayhours" type="time">
+                                        <label class="col-sm-6" for="answer">Display After(days/hours)</label>
+                                    </div> -->
                                 </div>
+
                             </div>
                         </div>
                     </div>
