quiz marks time and total marks

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-description/templates/quiz-description-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-description/templates/quiz-description-tpl.html
@@ -74,7 +74,7 @@
         <div>
             <div class="icon-data">
                 <div class="marks">
-                    <h3>10</h3>
+                    <h3>{{getQuestionMarks}}</h3>
                 </div>
             </div>
             <h4>Marks for one question</h4>
@@ -82,7 +82,7 @@
         <div>
             <div class="icon-data">
                 <div class="time">
-                    <h3>1 <span>MIN</span></h3>
+                    <h3>{{getQuestionDuration}} <span>MIN</span></h3>
                 </div>
             </div>
             <h4>Advised time for current question</h4>
@@ -90,7 +90,7 @@
         <div>
             <div class="icon-data">
                 <div class="quiz">
-                    <h3>10</h3>
+                    <h3>{{marks}}</h3>
                 </div>
             </div>
             <h4>Total quiz marks</h4>
