--- a/wp-content/themes/walnut/walnut/dev/js/apps/edit-module/module-description/templates/collection-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/edit-module/module-description/templates/collection-details.html
@@ -245,7 +245,7 @@
                                     </div>
                                     <div class="col-sm-6">
                                         <input class="col-sm-2" name="permissions[displayAfterDays]" type="number" id="replaydays" min="0" value="1">
-                                        <input class="col-sm-4" name="permissions[displayAfterHours]" id="replayhours" type="time">
+                                        <input class="col-sm-4" name="permissions[displayAfterHours]" id="replayhours" type="text" value="00:00:00">
                                         <label class="col-sm-6" for="answer">Display After(days/hours)</label>
                                     </div>
                                 </div>
