comment if present

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
@@ -36,6 +36,9 @@
             {{#hint}}
                 <label class="small-text text-grey ">Viewed Hint: <span class="bold">{{hint_viewed}}<span></label>
             {{/hint}}
+            {{#comment}}
+                <label class="small-text text-grey ">Comment: <span class="bold">{{comment}}<span></label>
+            {{/comment}}
         </div>
     {{/responseStatus}}
 </div>
@@ -77,6 +80,9 @@
             {{#hint}}
                 <label class="small-text text-grey ">Viewed Hint: <span class="bold">{{hint_viewed}}<span></label>
             {{/hint}}
+            {{#comment}}
+                <label class="small-text text-grey ">Comment: <span class="bold">{{comment}}<span></label>
+            {{/comment}}
         </div>
     {{/responseStatus}}
 
