--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -680,3 +680,16 @@ select{
 // }
 
 a.browse-content-pieces-item{height:160px;}
+
+// custom
+.db {
+	display: block;
+}
+
+.fosz14 {
+	font-size: 14px;
+}
+
+.quizActions #submit-question {
+	background: #fe7e65;
+}
