--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -134,7 +134,6 @@
   src: local('CinzelDecorative'), local('CinzelDecorative-Regular'), url(../fonts/CinzelDecorative-Regular.ttf) format('True Type');
   src: local('CinzelDecorative'), local('CinzelDecorative-Regular'), url(../fonts/CinzelDecorative-Regular.woff) format('woff');
 }
-
 @font-face {
   font-family: 'Aksharyogini';
   font-style: normal;
@@ -143,7 +142,6 @@
   src: local('Aksharyogini'), local('Aksharyogini-Normal'), url(../fonts/Aksharyogini2Normal.ttf) format('True Type');
   src: local('Aksharyogini'), local('Aksharyogini-Normal'), url(../fonts/Aksharyogini2Normal.woff) format('woff');
 }
-
 @font-face {
   font-family: 'Garamond';
   font-style: normal;
@@ -152,7 +150,6 @@
   src: local('Garamond'), local('Garamond-Normal'), url(../fonts/Garamond.ttf) format('True Type');
   src: local('Garamond'), local('Garamond-Normal'), url(../fonts/Garamond.woff) format('woff');
 }
-
 @font-face {
   font-family: 'Calibri';
   font-style: normal;
@@ -169,7 +166,6 @@
   src: local('Days Later'), local('28-Days-Later-Normal'), url(../fonts/28DaysLater.ttf) format('True Type');
   src: local('Days Later'), local('28-Days-Later-Normal'), url(../fonts/28DaysLater.woff) format('woff');
 }
-
 @font-face {
   font-family: 'Days Ago';
   font-style: normal;
@@ -178,7 +174,6 @@
   src: local('Days Ago'), local('36daysago-Normal'), url(../fonts/36daysagoThickBRK.ttf) format('True Type');
   src: local('Days Ago'), local('36daysago-Normal'), url(../fonts/36daysagoThickBRK.woff) format('woff');
 }
-
 @font-face {
   font-family: 'Bedizen';
   font-style: normal;
@@ -187,7 +182,6 @@
   src: local('Bedizen'), local('Bedizen-Normal'), url(../fonts/Bedizen.ttf) format('True Type');
   src: local('Bedizen'), local('Bedizen-Normal'), url(../fonts/Bedizen.woff) format('woff');
 }
-
 @font-face {
   font-family: 'Braveheart DNA';
   font-style: normal;
@@ -196,7 +190,6 @@
   src: local('BraveheartDNA'), local('BraveheartDNA-Normal'), url(../fonts/BraveheartDNA.ttf) format('True Type');
   src: local('BraveheartDNA'), local('BraveheartDNA-Normal'), url(../fonts/BraveheartDNA.woff) format('woff');
 }
-
 @font-face {
   font-family: 'Cardo';
   font-style: normal;
@@ -205,7 +198,6 @@
   src: local('Cardo'), local('Cardo-Normal'), url(../fonts/Cardo.ttf) format('True Type');
   src: local('Cardo'), local('Cardo-Normal'), url(../fonts/Cardo.woff) format('woff');
 }
-
 @font-face {
   font-family: 'Corporate Rounded';
   font-style: normal;
@@ -222,7 +214,6 @@
   src: local('Lane Humouresque'), local('LaneHumouresque-Normal'), url(../fonts/LaneHumouresque.ttf) format('True Type');
   src: local('Lane Humouresque'), local('LaneHumouresque-Normal'), url(../fonts/LaneHumouresque.woff) format('woff');
 }
-
 @font-face {
   font-family: 'KG Corner of the Sky';
   font-style: normal;
@@ -231,7 +222,6 @@
   src: local('KG Corner of the Sky'), local('KGCorneroftheSky-Normal'), url(../fonts/KGCorneroftheSky.ttf) format('True Type');
   src: local('KG Corner of the Sky'), local('KGCorneroftheSky-Normal'), url(../fonts/KGCorneroftheSky.woff) format('woff');
 }
-
 @font-face {
   font-family: 'Qarmic Sans Free';
   font-style: normal;
@@ -240,7 +230,6 @@
   src: local('Qarmic Sans Free'), local('QarmicSansFree-Normal'), url(../fonts/QarmicSansFree.ttf) format('True Type');
   src: local('Qarmic Sans Free'), local('QarmicSansFree-Normal'), url(../fonts/QarmicSansFree.woff) format('woff');
 }
-
 .creator {
   position: relative;
 }
@@ -491,6 +480,7 @@
   border: 2px solid #f3f3f3;
   padding: 7px;
   margin: 4px 0 11px;
+  font-family: "Qarmic Sans Free";
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
   -moz-transition: all 0.3s ease-out;
@@ -499,7 +489,6 @@
   /* Opera 10.50–12.00 */
   transition: all 0.3s ease-out;
   /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
-  font-family: "Qarmic Sans Free";
 }
 .element-wrapper .element-controls {
   position: relative;
@@ -1520,6 +1509,7 @@ p.mcq-option-text {
   margin-top: 15px;
   margin-left: 220px;
   margin-right: 220px;
+  margin-bottom: 50px;
   overflow-x: auto;
 }
 #content-board .element-wrapper {
@@ -3107,22 +3097,18 @@ select:before {
   width: 100%;
   height: 100%;
 }
-
-a.browse-content-pieces-item{height:160px;}
-
-#textbooks.list.myClass .txtbook.noCursor {
-  cursor: auto;
-}
-
-
 .media_times > input[type="text"] {
   width: 100%;
 }
-
-.filters > .table-tools-actions > #s2id_divisions-filter{
-  width: 12%;
+a.browse-content-pieces-item {
+  height: 160px;
 }
-
-a.browse-content-pieces-item{height:160px;}
-
-/*# sourceMappingURL=custom.css.map */
+.db {
+  display: block;
+}
+.fosz14 {
+  font-size: 14px;
+}
+.quizActions #submit-question {
+  background: #fe7e65;
+}
