--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
@@ -28,16 +28,16 @@
             {{/display_answer}}
 
             {{#display_answer}}
-                <label class="text-info">
+                <label class="text-info db">
                     Marks: <span class="bold">{{marks_obtained}}/{{total_marks}}</span>
                 </label>
             {{/display_answer}}
-            <label class="small-text text-grey">Time Taken: <span class="bold">{{timeTaken}}</span></label>
+            <label class="small-text text-grey db">Time Taken: <span class="bold">{{timeTaken}}</span></label>
             {{#hint}}
-                <label class="small-text text-grey ">Viewed Hint: <span class="bold">{{hint_viewed}}<span></label>
+                <label class="small-text text-grey db">Viewed Hint: <span class="bold">{{hint_viewed}}<span></label>
             {{/hint}}
             {{#comment}}
-                <label class="small-text text-grey ">Comment: <span class="bold">{{comment}}<span></label>
+                <label class="small-text text-grey db">Comment: <span class="bold">{{comment}}<span></label>
             {{/comment}}
         </div>
     {{/responseStatus}}
@@ -72,16 +72,16 @@
             {{/display_answer}}
 
             {{#display_answer}}
-                <label class="text-info">
+                <label class="text-info db">
                     Marks: <span class="bold">{{marks_obtained}}/{{total_marks}}</span>
                 </label>
             {{/display_answer}}
-            <label class="small-text text-grey">Time Taken: <span class="bold">{{timeTaken}}</span></label>
+            <label class="small-text text-grey db">Time Taken: <span class="bold">{{timeTaken}}</span></label>
             {{#hint}}
-                <label class="small-text text-grey ">Viewed Hint: <span class="bold">{{hint_viewed}}<span></label>
+                <label class="small-text text-grey db">Viewed Hint: <span class="bold">{{hint_viewed}}<span></label>
             {{/hint}}
             {{#comment}}
-                <label class="small-text text-grey ">Comment: <span class="bold">{{comment}}<span></label>
+                <label class="small-text text-grey db">Comment: <span class="bold">{{comment}}<span></label>
             {{/comment}}
         </div>
     {{/responseStatus}}
