submit btn bgcolor changed

--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -691,5 +691,8 @@ a.browse-content-pieces-item{height:160px;}
 }
 
 .quizActions #submit-question {
-	background: #fe7e65;
+	background: #fe7e65 !important;
+	&:hover {
+		background: #FF8685 !important;
+	}
 }
