admin.less file added

--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -19,6 +19,7 @@
 @import "quiz.less";
 @import "teacher.less";
 @import "student.less";
+@import "admin.less";
 
 body{
 	background-color: @body-bg;
