update status to publish bulk latest questions for students

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/single-question/templates/question-area-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/single-question/templates/question-area-tpl.html
@@ -45,7 +45,7 @@
 <!--New design code-->
 
 
-<div class="container-grey m-b-10 p-l-10 p-r-10 p-t-10 p-b-10 h-center quizActions new-design"> 
+<div class="container-grey m-b-10 p-l-10 p-r-10 p-t-10 p-b-10 h-center quizActions new-design text-right"> 
     <!-- <span class="pull-left small" id="first_question"></span> -->
   
         {{#show_skip}}
