--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/single-question/templates/question-area-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/single-question/templates/question-area-tpl.html
@@ -14,7 +14,7 @@
         <i class="fa fa-backward"></i> Previous 
     </button>
     {{#allow_submit_answer}}
-   <button type="button" id="submit-question" class="btn btn-success pull-right">
+   <button type="button" id="submit-question" class="btn btn-success pull-right submit-single">
         Submit <i class="fa fa-forward"></i> 
     </button>
     {{/allow_submit_answer}}
@@ -67,13 +67,13 @@
     
 
     {{#allow_submit_answer}}   
-   <button type="button" id="submit-question" class="btn btn-success">
+   <button type="button" id="submit-question" class="btn btn-success submit-single">
         Submit <i class="fa fa-forward"></i> 
     </button>
     {{/allow_submit_answer}}
         <div class="submit2">
         {{#allow_submit_answer}}   
-           <button type="button" id="submit-question" class="btn btn-success">
+            <button type="button" id="submit-question" class="btn btn-success submit-single">
                 Submit <i class="fa fa-forward"></i> 
             </button>
         {{/allow_submit_answer}}        
