--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
@@ -144,6 +144,10 @@
                             .text{
                                 font-size: 1.5em;
                                 color: @quiz-link-color3;
+                                padding: 5px 0 0 0;
+                                @media screen and (max-width: 1400px) {
+                                    padding: 8px 0 0 0;
+                                }
                                 @media (max-width: 1370px) {
                                     font-size: 1.2em;
                                 }                                 
