custom popover for comments added

--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -2158,7 +2158,8 @@ input#duration {
   position: absolute;
   right: -165px;
   top: 0;
-  width: 150px;
+  // width: 150px;
+  width: 200px;
 }
 .modTimes > div {
   width: 25%;
