--- a/wp-content/themes/walnut/walnut/dev/css/admin.css
+++ b/wp-content/themes/walnut/walnut/dev/css/admin.css
@@ -214,3 +214,53 @@
   color: #D1DADE;
 }
 
+
+/* ---------------------------
+   DOWNLOAD EXCEL REPORT STYLING  -----------
+ ---------------------------
+*/
+
+
+.report-container{
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: -ms-flex;
+    display: -webkit-box;
+    display: flex;
+    -webkit-justify-content: center;
+    -ms-justify-content: center;
+    justify-content: center;
+}
+
+.report-container .view-report{
+    font-size: 1em;
+    margin: 0;
+}
+
+@media screen and (max-width: 1400) {
+  .report-container .view-report{
+      padding: 6px 5px;
+  }
+}
+
+.report-container .xl-report{
+    border: 0;
+    background-color: rgba(37, 155, 36, 0.75);
+    padding: 0 10px;
+    box-shadow: -1px 0px 6px 1px rgba(0, 0, 0, 0.23);
+    color: #fff;
+    outline: 0;
+    transition: all 0.5s ease;
+}
+
+.report-container .xl-report:hover{
+    background-color: rgba(37, 155, 36, 0.93);
+}
+
+.report-container .xl-report i{
+    font-size: 0.9em;
+}
+
+
+
+
